recursion.lessons.recursion.koch.Crab.scala.error
Crab:6: error: ')' expected but ';' found.
	crab(levels - 1, length/(Math.sqrt(2));
                                              ^